--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,8 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button menu="m1"></ion-menu-button>
+      <ion-back-button defaultHref="/home/tabs/categories"></ion-back-button>
     </ion-buttons>
+    <!-- <ion-buttons slot="start">
+      <ion-menu-button menu="m1"></ion-menu-button>
+    </ion-buttons> -->
     <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -20,8 +23,7 @@
   </div>
   <div style="height:15%;width:100%;background-color:whitesmoke">
     <div style="position: relative;top: 50%;transform: translateY(-50%);">
-      <input type="number" placeholder="Enter your phone number" #phoneNumber
-        style="height: 42px;margin-left: 22px;width: 220px;font-size: 20px;border-radius: 8px;">
+      <input type="number" placeholder="Enter your phone number" #phoneNumber style="height: 42px;margin-left: 22px;width: 220px;font-size: 20px;border-radius: 8px;">
       <button type="submit" style="height: 42px;width: 78px;margin-left: 27px;border-radius: 12px;" (click)="login(phoneNumber.value)">
         Login</button>
     </div>
