--- a/src/app/delivery-address/delivery-address.page.scss
+++ b/src/app/delivery-address/delivery-address.page.scss
@@ -11,6 +11,11 @@ page-delivery-address {
     }
 }
 
+ion-content{
+    --ion-background-color: #F8F8F8;
+}
+
+
 .deliveryaddressbutton
 {
    width:80% !important;
