--- a/src/app/home/profile/profile.page.html
+++ b/src/app/home/profile/profile.page.html
@@ -33,10 +33,10 @@
             <ion-icon name='locate' slot="start"></ion-icon>
             Manage Addresses
           </ion-item>
-          <!-- <ion-item (click)="myOrder()">
+          <ion-item (click)="myOrder()">
             <ion-icon name='basket' slot="start"></ion-icon>
             Manage Orders
-          </ion-item> -->
+          </ion-item>
           <ion-item (click)="myCoupons()">
             <ion-icon name="albums" md="md-albums" slot="start"></ion-icon>
             Offers
@@ -45,10 +45,6 @@
               <ion-icon ios="ios-bookmark" md="md-bookmark" slot="start"></ion-icon>
             Favourite Stores
           </ion-item> -->
-          <!-- <ion-item (click)="myCoupons()">
-            <ion-icon name="albums" md="md-albums" slot="start"></ion-icon>
-            Referal
-          </ion-item>       -->
         </ion-list>
       </ion-col>
     </ion-row>
