--- a/src/app/order/order-detail/order-detail.page.scss
+++ b/src/app/order/order-detail/order-detail.page.scss
@@ -1,26 +1,7 @@
-.cancelcss
-{
-    color:#000 !important
-}
-
-ion-content{
-    --ion-background-color: #F8F8F8;
-}
-
-
-.removecss
-{
-    color: red !important
-}
-
-.freedeliveryspancss
-{
-        text-align: center;padding-top: 43px;color:#6fa833;font-weight:bold
-}
-
-.footer_color{
-    background-color:#6fa833 !important;
-    color:white
+.orderrowstyles{
+    padding-left:10px;
+    padding-top:5px;
+    padding-bottom:10px;
 }
 
 .innerCartWrap {
