--- a/src/app/offer/offer.page.html
+++ b/src/app/offer/offer.page.html
@@ -8,24 +8,32 @@
 </ion-header>
 
 <ion-content>
-
-    <ion-grid *ngIf="offers?.length > 0">
+    <div *ngIf="!offers?.length && !isLoading" class="outer_empty_cart_wrap">
+        <div class="innerCartWrap">
+            <span style="color:#b61671">No Available Vouchers!</span>
+        </div>
+    </div>
+    <ion-grid>
         <ion-row>
+            <ion-col size-md="8" offset-md="2" text-center *ngIf="isLoading">
+                <ion-spinner color="primary"></ion-spinner>
+            </ion-col>
             <ion-col size="12" size-sm="8" offset-sm="2">
-                <ion-card *ngFor="let offer of offers">
-                    <img *ngIf="offer?.image_url" [src]="offer?.image_url" />
-                    <img *ngIf="!offer?.image_url" src="assets/images/default_image.jpg" />
-                    <ion-card-header>
-                        <ion-card-subtitle>Voucher Code: {{ offer?.voucher_code }}</ion-card-subtitle>
-                        <ion-card-title>Offer Amount: &#8377; {{ offer?.voucher_amount }}</ion-card-title>
-                    </ion-card-header>
-                    <ion-card-content>
-                        <p>Min Cart Amount: &#8377; {{ offer?.voucher_amount }}</p>
-                        {{offer?.description}}
-                        {{offer?.applyButton}}
-                        <ion-button (click)="applyVoucher(offer)" [disabled]="!offer?.applyButton" expand="block" fill="clear" color="primary"> APPLY </ion-button>
-                    </ion-card-content>
-                </ion-card>
+                <div *ngIf="offers?.length > 0">
+                    <ion-card *ngFor="let offer of offers">
+                        <img *ngIf="offer?.image_url" [src]="offer?.image_url" />
+                        <img *ngIf="!offer?.image_url" src="assets/images/default_image.jpg" />
+                        <ion-card-header>
+                            <ion-card-subtitle>Voucher Code: {{ offer?.voucher_code }}</ion-card-subtitle>
+                            <ion-card-title>Offer Amount: &#8377; {{ offer?.voucher_amount }}</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                            <p>Min Cart Amount: &#8377; {{ offer?.voucher_amount }}</p>
+                            {{offer?.description}} {{offer?.applyButton}}
+                            <ion-button (click)="applyVoucher(offer)" [disabled]="!offer?.applyButton" expand="block" fill="clear" color="primary"> APPLY </ion-button>
+                        </ion-card-content>
+                    </ion-card>
+                </div>
             </ion-col>
         </ion-row>
     </ion-grid>
