--- a/src/app/store/store-categories/store-categories.page.html
+++ b/src/app/store/store-categories/store-categories.page.html
@@ -15,7 +15,7 @@
           <ion-item>
             <ion-thumbnail slot="start">
               <ion-img *ngIf="loadedStore?.image_url" [src]="loadedStore?.image_url"></ion-img>
-              <ion-img *ngIf="!loadedStore?.image_url" src="../../../../assets/images/default_image.jpg"></ion-img>
+              <ion-img *ngIf="!loadedStore?.image_url" src="assets/images/default_image.jpg"></ion-img>
             </ion-thumbnail>
             <ion-label>
               <h2>{{loadedStore?.store_name}}</h2>
@@ -30,7 +30,7 @@
         <ion-spinner color="primary"></ion-spinner>
       </ion-col>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-card>
+        <ion-card style="background-color: white;">
           <ion-card-header>
             <ion-card-title>Categories</ion-card-title>
             <ion-card-subtitle> Browse items by categories
@@ -40,9 +40,10 @@
             <div>
               <ion-grid>
                 <ion-row>
-                  <ion-col class="ion-text-center" size="4" (click)="clickStoreCategory(item.store_category_mapping_id)" *ngFor="let item of storeCategories">
-                    <ion-img *ngIf="item?.image_url" [src]="item?.image_url"></ion-img>
-                    <ion-img *ngIf="!item?.image_url" src="../../../../assets/images/default_image.jpg"></ion-img>
+                  <ion-col style="background-color: #fafafa;border:1px solid lightgrey"
+                    class="ion-text-center" size="4" (click)="clickStoreCategory(item.store_category_mapping_id)" *ngFor="let item of storeCategories">
+                    <ion-img style="height: 104px !important;" *ngIf="item?.image_url" [src]="item?.image_url"></ion-img>
+                    <ion-img style="height: 104px !important;" *ngIf="!item?.image_url" src="assets/images/default_image.jpg"></ion-img>
                     <ion-text style="height:30px">{{item?.name}}</ion-text>
                   </ion-col>
                 </ion-row>
