--- a/src/app/store/store-categories/store-categories.page.scss
+++ b/src/app/store/store-categories/store-categories.page.scss
@@ -5,3 +5,9 @@ ion-content{
 ion-card {
     --ion-background-color: #fff;   
 }
+
+
+ion-item{
+    --ion-background-color:#fff;
+    // padding-bottom:10px;
+ }
