--- a/src/app/delivery-address/delivery-address.page.html
+++ b/src/app/delivery-address/delivery-address.page.html
@@ -18,7 +18,10 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col size="12">
+            <ion-col size="12" size-md="8" offset-md="2" text-center *ngIf="isLoading">
+                <ion-spinner color="primary"></ion-spinner>
+            </ion-col>
+            <ion-col size="12" *ngIf="!isLoading">
                 <div *ngFor="let item of addressList">
                     <ion-card style="background-color:#fff">
                         <ion-card-header>
