--- a/src/app/delivery-address/delivery-options/delivery-options.page.html
+++ b/src/app/delivery-address/delivery-options/delivery-options.page.html
@@ -12,9 +12,16 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center style="background-color: #fff;">
         <ion-list>
-          <ion-item (click)="deliveryInstructions()" lines="none" style="background-color:whitesmoke">
+          <ion-item *ngIf="deliveryIntructions==''" (click)="adddeliveryInstructions()" lines="none" style="background-color:whitesmoke">
             <ion-icon slot="start" name="paper"></ion-icon>
             <ion-label>Any Delivery Instructions</ion-label>
+          </ion-item>
+          <ion-item *ngIf="deliveryIntructions!=''" lines="none" style="background-color:whitesmoke">
+            <ion-label>{{deliveryIntructions}}</ion-label>
+            <ion-button (click)="removeInstructions()">
+              Remove
+              <ion-icon name="close"></ion-icon>
+            </ion-button>
           </ion-item>
         </ion-list>
       </ion-col>
