--- a/src/app/home/search/search.page.html
+++ b/src/app/home/search/search.page.html
@@ -12,7 +12,7 @@
     <ion-row>
       <ion-col>
         <form [formGroup]="searchCriteriaForm">
-          <ion-item style="border:1px solid black;background-color:#fff">
+          <ion-item style="background-color:#fff">
             <ion-label position="floating">Search in stores</ion-label>
             <ion-input type="text" (keyup)="onChanges()" autocomplete="off" formControlName="searchCriteria"></ion-input>
             <ion-icon name="search" slot="end" style="padding-top: 8px;"></ion-icon>
