--- a/src/app/store/store.page.html
+++ b/src/app/store/store.page.html
@@ -15,7 +15,8 @@
       </ion-col>
       <ion-col size="12" size-sm="8" offset-sm="2">
         <form [formGroup]="searchCriteriaForm">
-          <ion-item style="border:1px solid black">
+            <!-- style="border:1px solid black" -->
+          <ion-item>
             <ion-label position="floating">Search in {{categoryName}}</ion-label>
             <ion-input type="text" (keyup)="onChanges()" autocomplete="off" formControlName="searchCriteria"></ion-input>
             <ion-icon style="padding-top: 8px;" name="search" slot="end"></ion-icon>
@@ -25,7 +26,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col size="12" size-sm="8" offset-sm="2" style="font-weight:550">
         <ion-text>{{loadedStoresCount}} Stores Nearby</ion-text>
       </ion-col>
     </ion-row>
