--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -9,3 +9,13 @@
   vertical-align: middle;
   text-align: center;
 }
+
+ion-content{
+  --ion-background-color: #F8F8F8;
+}
+
+.footer_color{
+  background-color:whitesmoke !important;
+  // color:white;
+  // height:15%;
+}
